# ai-foundations

./: .gitignore  README.md  out.txt  pyproject.toml  test.sh
course_1/: gdm_lab_1_1_create_your_own_probability_distribution.ipynb  gdm_lab_1_2_experiment_with_n_gram_models.ipynb  gdm_lab_1_3_compare_n_gram_models_and_transformer_language_models.ipynb  gdm_lab_1_4_prepare_the_dataset_for_training_a_slm.ipynb  gdm_lab_1_5_train_your_own_small_language_model.ipynb
course_2/: gdm_lab_2_5_experiment_with_embeddings.ipynb
course_3/: gdm_lab_3_1_distinguish_between_signal_and_noise.ipynb  gdm_lab_3_3_separate_more_complex_data.ipynb  gdm_lab_3_4_design_your_own_mlp.ipynb  gdm_lab_3_5_tune_hyperparameters.ipynb  gdm_lab_3_6_mitigate_overfitting.ipynb  gdm_lab_3_8_train_your_model_with_keras.ipynb
course_4/: gdm_lab_4_1_attention_visualization.ipynb  gdm_lab_4_2_implement_attention_equation.ipynb  gdm_lab_4_3_implement_attention_equation_2.ipynb
course_5/: gdm_lab_5_1_prompt_your_slm_with_questions.ipynb  gdm_lab_5_2_format_text_for_turn_based_dialogue.ipynb  gdm_lab_5_3_fine_tune_all_parameters_of_your_slm.ipynb  gdm_lab_5_4_full_parameter_fine_tuning_of_gemma.ipynb  gdm_lab_5_5_implement_lora_for_parameter_efficient_fine_tuning.ipynb  gdm_lab_5_6_fine_tune_gemma_with_lora.ipynb
course_7/: gdm_lab_7_1_compare_models_of_different_sizes.ipynb  gdm_lab_7_2_estimate_training_flops.ipynb  gdm_lab_7_3_hitting_a_wall.ipynb  gdm_lab_7_4_estimate_gpu_memory.ipynb  gdm_lab_7_5_fine_tune_a_model_with_bfloat16.ipynb  gdm_lab_7_6_apply_gradient_accumulation.ipynb
course_8/: gdm_lab_8_1_classification_data_inspection.ipynb  gdm_lab_8_2_classification_part_1.ipynb  (+7 more)
(+75 files in other folders)
