[project]
name = "ai_foundations"
version = "0.1.0"
description = "AI Research Foundations curriculum tools and utilities"
readme = "README.md"
requires-python = ">= 3.10"
license = {file = "LICENSE"}

classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Education",
]
dependencies = [
    "gemma == 3.0.0",
    "IPython == 7.34.0",
    "jax == 0.7.2",
    "kauldron == 1.3.0",
    "keras == 3.13.2",
    "keras_hub == 0.26.0",
    "numpy == 2.0.2",
    "orbax-checkpoint == 0.11.21",
    "pandas == 2.2.2",
    "plotly == 5.24.1",
    "typeguard == 4.4.4",
]

[project.urls]
repository = "https://github.com/google-deepmind/ai-foundations"

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pyink",
    "pylint>=2.6.0",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
