[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-foundations"
version = "0.1.0"
description = "AI Foundations course notebooks and local helper package"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_foundations*"]
